--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,15 @@
 
     <groupId>com.arcunis</groupId>
     <artifactId>Core</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <packaging>jar</packaging>
 
     <name>Core</name>
 
-    <description>Developer api for arcunis plugins</description>
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <url>arcunis.com</url>
 
     <build>
         <plugins>
